plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'me.modmuss50.mod-publish-plugin' version '1.1.0'
}

def isSnapshotVersioning = project.hasProperty('snapshot_versioning') && project.property('snapshot_versioning').toString().toBoolean()
def resolvedVersion = isSnapshotVersioning ? "${mod_version}-SNAPSHOT" : mod_version

group = mod_group_id
version = resolvedVersion

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = 'https://maven.createmod.net' }
    maven { url = 'https://maven.tterrag.com' }
    maven {
        name = 'azmod-maven'
        url = uri("https://maven.azmod.net/${findProperty('azmodRepository') ?: 'releases'}")
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    compileOnly fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            mod_version: project.version
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties
    }
}

tasks.register('sourcesJar', Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allJava
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes('FMLModType': 'GAMELIBRARY')
        attributes('MixinConfigs': 'struts.mixins.json')
    }
    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
            artifact tasks.named('sourcesJar')
            groupId = mod_group_id
            artifactId = mod_id
            version = project.version
        }
    }

    repositories {
        maven {
            name = 'azmod-maven'
            url = uri("https://maven.azmod.net/${findProperty('azmodRepository') ?: 'releases'}")
            credentials {
                username = findProperty('azmodMavenUser') ?: System.getenv('AZMOD_MAVEN_USER')
                password = findProperty('azmodMavenToken') ?: System.getenv('AZMOD_MAVEN_TOKEN')
            }
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// ========================
// Changelog & Publishing
// ========================

String getRelevantChangelog(String targetVersion) {
    def changelogFile = file("CHANGELOG.md")
    if (!changelogFile.exists()) {
        return "No changelog found."
    }
    def lines = changelogFile.readLines()
    def result = new StringBuilder()
    def capturing = false
    def targetMinecraftVersion = targetVersion.split("-")[0]
    def targetModVersion = targetVersion.split("-").length > 1 ? targetVersion.split("-")[1] : ""
    def newerVersionsExist = false

    for (line in lines) {
        if (line.startsWith("# ")) {
            if (capturing) {
                break
            }
            def versionTag = line.substring(2).trim()
            def entryMinecraftVersion = versionTag.split("-")[0]
            def entryModVersion = versionTag.split("-").length > 1 ? versionTag.split("-")[1] : ""
            if (versionTag == targetVersion) {
                capturing = true
                continue
            }
            if (entryMinecraftVersion == targetMinecraftVersion && entryModVersion > targetModVersion) {
                newerVersionsExist = true
            }
        } else if (capturing && line.trim()) {
            result.append(line).append("\n")
        }
    }

    if (newerVersionsExist) {
        println("WARNING: Publishing an older version! Newer entries exist for Minecraft ${targetMinecraftVersion}.")
    }

    return result.length() > 0 ? result.toString().trim() : "No changelog entry found for version ${targetVersion}."
}

publishMods {
    file = jar.archiveFile
    def changelogText = getRelevantChangelog(minecraft_version + "-" + mod_version)
    changelog = changelogText
    println("Using changelog:\n" + changelogText + "\n")
    type = STABLE
    modLoaders.add("forge")
    displayName = "Strut Your Stuff" + " " + mod_version + " Forge " + minecraft_version

    curseforge {
        projectId = "1486746"
        projectSlug = "strut-your-stuff"
        accessToken = findProperty('curseforgePublishToken')
        minecraftVersions.add("1.20.1")
        optional("flywheel")
    }
    modrinth {
        projectId = "sHO3MhQx"
        accessToken = findProperty('modrinthPublishToken')
        minecraftVersions.add("1.20.1")
        optional("flywheel")
    }

    discord {
        webhookUrl = findProperty('aztechDiscordPublishWebhook')
        username = "struts version bot"
        avatarUrl = "https://cataas.com/cat?width=500&height=500"
        content = """
        # New Mod Release: ${getDisplayName().get()}
        ${changelogText}
        """.trim()
        style {
            look = "CLASSIC"
        }
    }
}
